--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <h1><a href="มหาวิทยาลัย.html">มหาวิทยาลัย</a></h1>
     <br>
-    <h1><a href="https://drive.google.com/file/d/1mC-Z1ArHRUJK5r04q3-rwxMeurHhThMo/view?usp=sharing">Power point of Presentation equation 3<sup>x</sup>+p7<sup>y</sup>=z<sup>2</sup>
+    <h1><a href="https://drive.google.com/file/d/1mC-Z1ArHRUJK5r04q3-rwxMeurHhThMo/view?usp=sharing">Slide presentation of equation 3<sup>x</sup>+p7<sup>y</sup>=z<sup>2</sup>
     </a></h1>
 </center>
 </html>
